...
                supportingText = uiState.urlError?.let { error ->
                    { Text(text = uiTextStringResource(error)) }
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .defaultItemPadding()
                    .testTag("external_link_url_field"),
                singleLine = true,
                placeholder = { Text(text = stringResource(Res.string.example_url_placeholder)) }
            )
            Button(
                onClick = onClickNext,
                modifier = Modifier
...
